# schwarz-christoffel

./: CMakeLists.txt  README.md  main.cpp  visualize_sc_mapping.ipynb
include/: parameter_selection.hpp  polar.hpp  sc_mappings_class.hpp  sc_mappings_disk.hpp  utils.hpp
input_files/: points.txt  poly1.txt  poly2.txt
src/: parameter_selection.cpp  sc_mappings_disk.cpp  utils.cpp
